# FinalProjectTest

./: .breakpoints  LCD1602.py  activeBuzzer.py  buzzTest.py  finalProjectBackground.py  hardwareTest.py  lcd_i2c.py  main.py  mariobeat.py  passiveBuzzer.py  pyproject.toml  thermister.py
