[tool.poetry]
name = "repl_python3_final-project-test"
version = "0.1.0"
description = ""
authors = ["razdor99 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
smbus = "^1.1.post2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
